--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -3,4 +3,16 @@
         font-family: "Montserrat", sans-serif;
         color: #1e1e1e;
     }
+
+    p {
+        font-weight: 400;
+        line-height: 15px;
+        margin: 0;
+        margin-bottom: 4px;
+    }
+
+    h1 {
+        font-size: 1.4em;
+        margin: 0;
+    }
 </style>
